made teh footer little better

--- a/public/about/index.html
+++ b/public/about/index.html
@@ -203,7 +203,10 @@
       
       <p class="trail"><span class="hr"></span>Who we are</p>
       <br/>
-      <p class="p-text"> We help Americans navigate the challenges facing building their home.</p>
+      <p class="p-text">  <!--  We help Americans navigate the challenges facing building their home & other needs. -->
+        We help Americans in overcoming the challenges involved in building their home and fulfilling other related needs.
+
+      </p>
 
       <h2 class="fw-normal lh-1 py-3" > 200+ years </h2>
       <p class="p-text">of experience in Business & M&A. </p>
@@ -217,14 +220,15 @@
         <!-- <hr class="trail"> -->
 
         <p class="trail"><span class="hr"></span> </p>
-
-        <p class="p-text" style="margin-bottom: 75px;">Many Americans view homeownership as a critical piece of “the American dream.”
+<!-- bring back if needed -->
+        <!-- <p class="p-text" style="margin-bottom: 75px;">Many Americans view homeownership as a critical piece of “the American dream.”
           <br><br>
           We provide an individualized approach that helps them achieve their goal so they can live with a peace of mind and look forward to future with a bright smile. 
-        </p>
+        </p> -->
 
             <div>
-              <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > READ FAQ </a>
+              <!-- bring back -->
+              <!-- <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/free-discovery-call/" > READ FAQ </a> -->
           </div>
 
     </article>
@@ -287,7 +291,8 @@
   
 
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-  <div class="container ">
+  <div style="padding-left: 2.5em; padding-right: 2.5em;">
+   
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <a href="/" class="nav-link   text-white">
         <img width="75px" src="../static/logo/l1.webp" alt="">
@@ -295,7 +300,7 @@
 
       <ul class="nav col text-white justify-content-end">
         <!-- <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">About us</a></li>
-    <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
+        <li class="nav-item r-5"><a href="#" class="nav-link px-2  text-white">Careers</a></li> -->
         <li class="white-ghost-button nav-item r-5"><a href="/investors" class="nav-link-2  px-2">Investors</a></li>
       </ul>
     </article>
@@ -309,9 +314,9 @@
         </li>
       </ul>
     </article>
-    
+
     <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
-      <p class="col-md-2 mb-0 "></p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 "> Equity Group &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  </p>
       <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
         Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
         Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
@@ -320,6 +325,12 @@
         webpages change or subsequently become inaccurate except to the extent required under any separate agreement
         between you and Equity Group.
       </p>
+    </article>
+
+    <!-- to create extra space at end -->
+    <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 ">  </p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">  </p>
     </article>
   </div>
 </footer>
