--- a/public/grand/index.html
+++ b/public/grand/index.html
@@ -207,6 +207,7 @@
         <li>
           <p class="align-items-end"> 
             I've noticed that successful construction companies (that likes to keep growing) follow a growth trajectory that typically involves starting with home remodelling and then progressing to building homes or engaging in commercial construction.  
+            ( we want to acquire construction companies and build hundreds of houses each year.)
             <br/> 
          </p>
         </li>
@@ -312,7 +313,8 @@
 
   
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-  <div class="container ">
+  <div style="padding-left: 2.5em; padding-right: 2.5em;">
+   
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <a href="/" class="nav-link   text-white">
         <img width="75px" src="../static/logo/l1.webp" alt="">
@@ -336,7 +338,7 @@
     </article>
 
     <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
-      <p class="col-md-2 mb-0 "></p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 "> Equity Group &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  </p>
       <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
         Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
         Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
@@ -345,6 +347,12 @@
         webpages change or subsequently become inaccurate except to the extent required under any separate agreement
         between you and Equity Group.
       </p>
+    </article>
+
+    <!-- to create extra space at end -->
+    <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 ">  </p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">  </p>
     </article>
   </div>
 </footer>
