--- a/public/index.html
+++ b/public/index.html
@@ -314,13 +314,20 @@
    <hr class="featurette-divider">
 
    <!-- /END THE FEATURETTES -->
-
-
     </section>
 
     <!-- FEATURETTES end  -->
 
 
+
+     <!-- new start -->
+  <!-- <section class="img-fluid container-full mt-6"
+  style="margin-top: 40px; background-size:cover; height: 600px; background-position: center; background-image: url('static/img/home/home-interior-do-c.jpg');">
+</section>
+
+  <div class="container-full" style="background-image: url('static/img/home/home-interior-do-c.jpg');">
+  </div> -->
+  <!-- new end -->
 
 
 
@@ -398,10 +405,6 @@
       style="margin-top: 40px; background-size:cover; height: 600px; background-position: center; background-image: url('static/img/home/couples/walking-c-md.png');">
     </section>
 
-
-
-
-
     <div class="container-full" style="background-image: url('static/img/home/couples/walking-c.jpg');">
       <!-- <img class="img-fluid" src="static/img/home/couples/walking-c.jpg" alt=""> -->
     </div>
@@ -461,7 +464,7 @@
 
               <tr>
                 <th class="table-item" scope="row"> We will tailor our work to meet your specific needs and help you
-                  achieve your goals.  </th>
+                  achieve your goals  </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -474,7 +477,7 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row">  You can make small alterations, but they should not impact the total bill. </th>
+                <th class="table-item" scope="row">  You can make small alterations, but they should not impact the total bill </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -487,7 +490,7 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row"> No evaluation fee.
+                <th class="table-item" scope="row"> No evaluation fee
                 </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
@@ -554,7 +557,7 @@
         <!-- <div style="border-top-right-radius: 12px; border-bottom-right-radius: 12px; background-image: url('static/img/home/couples/home-steps-cleaned.jpg'); background-position-x: 95%;  color: #ffffff" class="background-image-text-section medium-padding"
       >
       </div> -->
-        <img class="img-fluid" src="static/img/home/couples/home-steps-cleaned.jpg" alt="">
+        <img style="height: 100%;" class="img-fluid" src="static/img/home/couples/home-steps-cleaned.jpg" alt="">
       </div>
 
     </div>
@@ -562,10 +565,16 @@
 
 
 
+ 
+
+
+
+
 
 
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-      <div class="container ">
+      <div style="padding-left: 2.5em; padding-right: 2.5em;">
+       
         <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
           <a href="/" class="nav-link   text-white">
             <img width="75px" src="../static/logo/l1.webp" alt="">
@@ -578,7 +587,7 @@
           </ul>
         </article>
 
-        <article class="d-flex flex-wrap justify-content-between align-items-center pt-3">
+        <article class="d-flex flex-wrap justify-content-between align-items-center">
           <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group</p>
 
           <ul class="nav col text-white justify-content-end">
@@ -588,8 +597,8 @@
           </ul>
         </article>
 
-        <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
-          <p class="col-md-2 mb-0 "></p>
+        <article class="d-flex flex-wrap justify-content-between align-items-end py-2">
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 "> Equity Group &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  </p>
           <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
             Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
             Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
@@ -599,8 +608,19 @@
             between you and Equity Group.
           </p>
         </article>
+
+        <!-- to create extra space at end -->
+        <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 ">  </p>
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">  </p>
+        </article>
       </div>
     </footer>
+
+
+
+    
+
 
 
 
