--- a/public/abtest/index.html
+++ b/public/abtest/index.html
@@ -377,7 +377,8 @@
 
 
     <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-      <div class="container ">
+      <div style="padding-left: 2.5em; padding-right: 2.5em;">
+       
         <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
           <a href="/" class="nav-link   text-white">
             <img width="75px" src="../static/logo/l1.webp" alt="">
@@ -401,7 +402,7 @@
         </article>
 
         <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
-          <p class="col-md-2 mb-0 "></p>
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 "> Equity Group &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  </p>
           <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
             Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
             Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
@@ -410,6 +411,12 @@
             webpages change or subsequently become inaccurate except to the extent required under any separate agreement
             between you and Equity Group.
           </p>
+        </article>
+
+        <!-- to create extra space at end -->
+        <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 ">  </p>
+          <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">  </p>
         </article>
       </div>
     </footer>
