--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -227,7 +227,7 @@
       </li>
       <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; To reduce taxes, the company can pay board members bonuses/salaries as an expense.</li>
       <li class="p-text">Current :   <a class="purpleColor" href="/deals"> Deals</a> </li>
-      <li class="p-text">Additional details about the board member position will be shared during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
+      <li class="p-text">Additional information about the board member position will be provided during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
       </a></li>
     
 
@@ -252,7 +252,7 @@
   <div class="row py-5">
   <article class="col-md-6" style="margin-bottom:40px">
     <p class="trail"><span class="hr"></span>Growth Trajectory</p>
-    <p class="p-text"> Acquistions Growth plan</p>
+    <p class="p-text"> Acquistions growth plan</p>
   </article>
 
   <article class="col-md-6">
@@ -411,7 +411,8 @@
 
   
 <footer class="container-full text-white" style="background-image: url('../static/img/woods/wood1.jpeg'); ">
-  <div class="container ">
+  <div style="padding-left: 2.5em; padding-right: 2.5em;">
+   
     <article class="d-flex flex-wrap justify-content-between align-items-center py-3">
       <a href="/" class="nav-link   text-white">
         <img width="75px" src="../static/logo/l1.webp" alt="">
@@ -435,7 +436,7 @@
     </article>
 
     <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
-      <p class="col-md-2 mb-0 "></p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 "> Equity Group &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  </p>
       <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">
         Any opinions or views stated on this website are subject to change without notice for any reason, and Equity
         Group reserves the right in its sole discretion, at any time and from time to time, to add, modify, or
@@ -444,6 +445,12 @@
         webpages change or subsequently become inaccurate except to the extent required under any separate agreement
         between you and Equity Group.
       </p>
+    </article>
+
+    <!-- to create extra space at end -->
+    <article class="d-flex flex-wrap justify-content-between align-items-end py-3">
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-2 mb-0 ">  </p>
+      <p style="font-size: 14px; opacity: .4; line-height: 18px; margin-top: 5px" class="col-md-8 mb-0 ">  </p>
     </article>
   </div>
 </footer>
