improved paul page

--- a/public/board/index.html
+++ b/public/board/index.html
@@ -41,6 +41,7 @@
 
   gtag('config', 'G-C1TE5PEN8F');
 </script>
+<link rel="stylesheet" href="../static/css_new/boardmem.css"> 
 </head>
 
 
@@ -182,8 +183,8 @@
          <div style="color: white;" class="h-100 p-5 rounded-3 ">
            <p style="margin-top: 70px;" class="trailw"><span class="hr"></span>EQUITY GROUP</p>
                  
-                 <h4 class="display-7 mb-4" style="margin-top: 100px;">Non Executive </h4>
-                 <h3 class="display-2 ">Board of Directors</h3>
+                 <h4 class="display-7 mb-4 push-rt-2-md" style="margin-top: 100px;">Non Executive </h4>
+                 <h3 class="display-2 push-rt-2-md">Board of Directors</h3>
 
            </div>
        </div>
