--- a/public/deals/index.html
+++ b/public/deals/index.html
@@ -241,8 +241,8 @@ We currently use the name equity group, which may be modified based on availabil
 Answer: Finish assembling the board, get the law firm & then we'll be all set to acquire the first deal.        
                     <br/><br/>
                     8. When and where will be the board meetings held?
-                    <br/>  Answer: The board meetings will be held in and around the first acquisition. The majority of the meetings will be held via Zoom.  
-                    <br> Most of the deal realted discussions, initial due diligence can & will be done via email / Basecamp. 
+                    <br/>  Answer: The board meetings will be held in and around the first acquisition. Meetings will be held via Zoom.  
+                    <br> Initial due diligence and most deal-related discussions can be conducted via email or Basecamp.
                     
                     <br/><br/>
 
