--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <link rel="icon" href="static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="static/logo/eqlogo.png" />
-  <title>Eqgpi | Equity Group</title>
+  <title>Equity Group</title>
 
   <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/product/"> -->
 
