--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -211,21 +211,22 @@
       <div class="row py-5">
 
         <article class="col-md-4" style="margin-bottom:40px">
-          <h2 class="">  Please fill the short form below </h2>
+          <h2 class="">  General Enquiries </h2>
           <br/>
-          <h6> We will send you more information.</h6>
+          <h6> Please fill the short form below </h6>
         </article>
 
         <article class="col-md-4" style="margin-bottom:40px">
-          <h3>  New Enquiries </h3>
+          <h2>  Project Enquiries </h2>
           <br/>
-          <h6> Please fill the form below. </h6>
+          <h6> Please fill the short form below </h6>
             <!-- <p>Call : <a class="purpleColor" href="">650-200-3406</a></p> -->
         </article>
 
         <article class="col-md-4" style="margin-bottom:40px">
-          <h3>  Current Project Enquiries </h3> <br/>
-          <h6> Please fill the form below. </h6>
+          <h2> Investor Related  </h2> <br/>
+          
+          <h6> Please fill the short form below </h6>
           <!-- <h6> Please Call:  <a class="purpleColor" href="">650-200-3406</a>  </h6> -->
 
         </article>
