--- a/public/join-us/index.html
+++ b/public/join-us/index.html
@@ -346,7 +346,7 @@
 
        
             <div>
-              <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/pmanager/" > Explore Positions </a>
+              <a class=" button wooden-a mt-4" style="text-transform: capitalize; text-decoration: none;" href="/vp-of-land/" > Explore Positions </a>
           </div>
     </article>
 
