--- a/public/about/index.html
+++ b/public/about/index.html
@@ -189,7 +189,7 @@
       <p class="trail"><span class="hr"></span>Who we are</p>
       <br/>
       <p class="p-text">  <!--  We help Americans navigate the challenges facing building their home & other needs. -->
-        We help Americans in overcoming the challenges involved in building their home and fulfilling other related needs.
+        We help Americans in overcoming the challenges involved in home improvement and fulfilling other related needs.
 
       </p>
 
