--- a/public/bi6/index.html
+++ b/public/bi6/index.html
@@ -219,10 +219,10 @@
             target="_blank" class="purpleColor"> Deck </a>
     </li> -->
       <li class="p-text ">
-        Please find the answers to frequently asked questions on this link:  <a class="purpleColor"  href="/deals"> FAQ</a>
+        Please find the answers to frequently asked questions on this link:  <a class="purpleColor"  href="/deals"> FAQ n Deals</a>
       </li>
-      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; To reduce taxes, the company can pay board members bonuses/salaries as an expense.</li>
-      <li class="p-text">Current :   <a class="purpleColor" href="/deals"> Deals</a> </li>
+      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; To reduce taxes, the company will pay board members bonuses/salaries as an expense.</li>
+      <li class="p-text">Current Deals:   <a class="purpleColor" href="/deals"> FAQ n Deals</a> </li>
       <li class="p-text">Additional information about the board member position will be provided during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
       </a></li>
     
