--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -36,7 +36,8 @@
   <!-- Custom styles for this template -->
   <link rel="stylesheet" href="../static/nav_style.css"> 
   <link rel='stylesheet' href='../static/old-Nav.css' type='text/css' media='all' />    
-
+<!-- swiper start -->
+<link rel="stylesheet" href="../static/css_new/swiperStyle.css">
 </head>
 
 
@@ -202,7 +203,7 @@
       <p class="p-text"> 
         1. What is the goal of the venture?
         <br/>
-        Answer: To acquire construction companies.
+        Answer: To acquire construction companies. We will start by acquiring home remodeling firms and then expand by adding synergistic acquisitions in the single-family space.
         
                                 <br/><br/>
                                 2. Do you have a platform company?
@@ -501,6 +502,8 @@ Answer: The exit strategy is either an IPO or selling it to a competitor.
   gtag('config', 'G-C1TE5PEN8F');
 </script>
 <!-- Google tag (gtag.js) -->
+<script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.js'></script>
+<script  src="../static/script_new/SwiperScript.js"></script>
 
     </body>
 </html>
