--- a/public/home/index.html
+++ b/public/home/index.html
@@ -203,7 +203,7 @@
       <article class="top-article">
         <div class="col-md-6 px-0">
           <h1 id="top-form" style="color:white" class="display-4  top-text-h"> We help Americans achieve their dream of
-            home improvement </h1>
+            homeownership </h1>
           <p style="width:85%; color:white" class="lead my-3 d-none d-sm-block top-text"> Many Americans view
             homeownership a crucial aspect of the "American Dream."
 
@@ -242,7 +242,7 @@
        <img width="500" height="500" class="bd-placeholder-img-lg featurette-image img-fluid mx-auto" src="../static/img/home/graph/gp1-md.png" alt="">
      </article>
      <article class="col-md-7">
-       <h2 class="display-6 featurette-heading fw-normal lh-1">Home improvements within your budget</h2>
+       <h2 class="display-6 featurette-heading fw-normal lh-1">Build your home within your budget</h2>
        <p class="lead">With our firm's assistance every step of the way, you can expect more with less money.</p>
 
        <div class="buildDiv">
