--- a/public/board/index.html
+++ b/public/board/index.html
@@ -192,10 +192,11 @@
   <div class="row align-items-md-stretch">
     <div class="col-md-3">
       <div class="h-100 p-5 rounded-3">
-        <img  loading="lazy" src="../static/img/profile-images/paulF.jpg"
+        
+        <img  loading="lazy" src="../static/img/profile-images/blank.jpg"
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
-                      alt="Paul Foster" loading="lazy"
-                      data-src="../static/img/profile-images/paulF.jpg" />
+                      alt="" loading="lazy"
+                      data-src="../static/img/profile-images/blank.jpg" />
 
       </div>
     </div>  
@@ -208,7 +209,7 @@
           <p class="exp">His primary focus is on structuring and negotiating transactions.</p>
 
         <div class="" style="margin-top:50px;">
-          <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="/paul" > READ MORE </a>
+          <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="" > READ MORE </a> -->
       </div>
       </div>
     </div>
