changes like  boardl9  etc to multiple routes for board people

--- a/public/bi6l/index.html
+++ b/public/bi6l/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
   <link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
   <link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
-    <title>Plan | Equity Group </title>
+    <title>About | Equity Group </title>
 
     <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
@@ -221,8 +221,7 @@
       <li class="p-text ">
         Please find the answers to frequently asked questions on this link:  <a class="purpleColor"  href="/deals"> FAQ n Deals</a>
       </li>
-      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-         To reduce taxes, the company will pay board members bonuses/salaries as an expense.</li>
+      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br/> To reduce taxes, the company will pay board members bonuses/salaries as an expense.</li>
       <li class="p-text">Current Deals:   <a class="purpleColor" href="/deals"> FAQ n Deals</a> </li>
       <li class="p-text">Additional information about the board member position will be provided during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
       </a></li>
@@ -271,55 +270,55 @@
     
     <br /><br />
     <table class="table">
-        <thead style="background-color: #f8f8f8;">
-            <tr>
-                <th scope="col">Year No</th>
-                <th scope="col">No of acquisitions</th>
-                <th scope="col">Total Acq </th>
+      <thead style="background-color: #f8f8f8;">
+          <tr>
+              <th scope="col">Year No</th>
+              <th scope="col">No of acquisitions</th>
+              <th scope="col">Total Acq </th>
 
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="row">1st yr</th>
-                <td>3</td>
-                <td>3</td>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <th scope="row">1st yr</th>
+              <td>3</td>
+              <td>3</td>
 
-            </tr>
-            <tr>
-              <th scope="row">2nd yr</th>
-              <td>5</td>
-              <td>8</td>
+          </tr>
+          <tr>
+            <th scope="row">2nd yr</th>
+            <td>5</td>
+            <td>8</td>
 
-            </tr>
-            <tr>
-                <th scope="row">3rd yr</th>
-                <td>6</td>
-                <td>14</td>
+          </tr>
+          <tr>
+              <th scope="row">3rd yr</th>
+              <td>6</td>
+              <td>14</td>
 
-            </tr>
-            <!-- <tr>
-              <th scope="row">4rth yr</th>
-              <td>18</td>
-              <td>1.5</td>
-              <td>60</td>
-            </tr>
+          </tr>
+          <!-- <tr>
+            <th scope="row">4rth yr</th>
+            <td>18</td>
+            <td>1.5</td>
+            <td>60</td>
+          </tr>
 
-            <tr>
-              <th scope="row">5th yr</th>
-              <td>18</td>
-              <td>1.5</td>
-              <td>78</td>
-            </tr>
+          <tr>
+            <th scope="row">5th yr</th>
+            <td>18</td>
+            <td>1.5</td>
+            <td>78</td>
+          </tr>
 
-            <tr>
-              <th scope="row">6th yr</th>
-              <td>22</td>
-              <td>1.8</td>
-              <td>100</td>
-            </tr> -->
-        </tbody>
-    </table>
+          <tr>
+            <th scope="row">6th yr</th>
+            <td>22</td>
+            <td>1.8</td>
+            <td>100</td>
+          </tr> -->
+      </tbody>
+  </table>
 
 
   </article>
@@ -348,7 +347,7 @@
     <div>
       <a class="button h-top-btn wooden-a"
         style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
-        href="/board9"> Current Board Members
+        href="/boardl"> Current Board Members
       </a>
     </div>
 
