--- a/public/bi6n/index.html
+++ b/public/bi6n/index.html
@@ -221,7 +221,8 @@
       <li class="p-text ">
         Please find the answers to frequently asked questions on this link:  <a class="purpleColor"  href="/deals"> FAQ n Deals</a>
       </li>
-      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; <br/> To reduce taxes, the company will pay board members bonuses/salaries as an expense.</li>
+      <li class="p-text">Board members will receive equity, annual compensation, and yearly bonus.  <br/> 
+        To reduce taxes, the company will pay board members bonuses as an expense.</li>
       <li class="p-text">Current Deals:   <a class="purpleColor" href="/deals"> FAQ n Deals</a> </li>
       <li class="p-text">Additional information about the board member position will be provided during the phone call. <a class="purpleColor" href="https://calendly.com/eqgpi/c" target="_blank"> Schedule the call here
       </a></li>
@@ -343,11 +344,11 @@
     <p class="trail"><span class="hr"></span> List of directors </p>
     
     <br /><br />
-    
+
     <div>
       <a class="button h-top-btn wooden-a"
         style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
-        href="/boardl"> Current Board Members
+        href="/boardna"> Current Board Members
       </a>
     </div>
 
