--- a/public/boardL9/index.html
+++ b/public/boardL9/index.html
@@ -230,7 +230,7 @@
     </div>  
     <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
       <div class="h-100 p-5 rounded-3">
-        <h2 class="display-8" >Former President, Remodel USA</h2>
+        <h2 class="display-8" >Former President, Remodel USA</h2>  <p> ( Waiting for board's approval ) </p>
         <p class="exp pt-3"> 
           Remodel USA is a major remodeling company operating in the Mid-Atlantic region of the United States. 
           During his tenure as president, the company experienced remarkable growth, with revenues increasing from $23 million 
@@ -266,9 +266,9 @@
       <div class="h-100 p-5 rounded-3">
         <h2 class="display-8" >Principal, Equity Group</h2>
         <p class="exp pt-3"> 
-          Mr. Jay Parteek has ‘10+’ years of experience in top IT /Software companies in Silicon Valley. 
-          He has worked in following companies: Apple Inc, Capital Group, Gap, Walmart Labs, BCG, Diamler ( Mercedes-Benz), 
-          Novartis, Paycor, Netgear & more.
+          Mr. Jay Parteek has over 10 years of experience in IT and software companies in Silicon Valley. 
+          <br/>
+          He has worked at various companies including Apple Inc, Capital Group, Gap, Walmart Labs, BCG, Diamler (Mercedes-Benz), Novartis, Paycor, Netgear, and more.
         
         
         </p>
