--- a/public/deals/index.html
+++ b/public/deals/index.html
@@ -220,7 +220,8 @@
                     <br/><br/>
                                
                     5. What is the geography focus of the venture?
-                    <br/>Answer: The focus is on the Midwest, and wherever we get the first great deal.
+                    <br/>Answer: We are focusing on the Midwest and Mid-Atlantic regions.  
+                    Wherever we get the first great deal.
 <br/><br/>
 6. When will the company be formed? Where will be the headquarters?
 <br/>
