--- a/public/bi6n/index.html
+++ b/public/bi6n/index.html
@@ -346,10 +346,11 @@
     <br /><br />
 
     <div>
-      <a class="button h-top-btn wooden-a"
+        <p> We will discuss over the phone call </p>
+      <!-- <a class="button h-top-btn wooden-a"
         style="text-transform: capitalize; text-decoration: none; line-height: 17px; "
-        href="/boardna"> Current Board Members
-      </a>
+        href="/"> Current Board Members
+      </a> -->
     </div>
 
 
