--- a/public/board9/index.html
+++ b/public/board9/index.html
@@ -209,7 +209,7 @@
           <p class="exp">His primary focus is on structuring and negotiating transactions.</p>
 
         <div class="" style="margin-top:50px;">
-          <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="/kha" > READ MORE </a>
+          <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="/kha" > READ MORE </a> -->
       </div>
       </div>
     </div>
