--- a/public/boardna/index.html
+++ b/public/boardna/index.html
@@ -266,11 +266,11 @@
     </div>  
     <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
       <div class="h-100 p-5 rounded-3">
-        <h2 class="display-8" >Principal, Equity Group</h2>
+        <h2 class="display-8" >Principal</h2>
         <p class="exp pt-3"> 
           Mr. Jay Parteek has over 10 years of experience in IT and software companies in Silicon Valley. 
           <br/>
-          He has worked at various companies including Apple Inc, Capital Group, Gap, Walmart Labs, BCG, Diamler (Mercedes-Benz), Novartis, Paycor & Netgear.
+          He has worked at various companies including Apple Inc, Capital Group, Gap, Walmart Labs, Paycor & Netgear.
         
         
         </p>
