--- a/Helpful/board9/index.html
+++ b/Helpful/board9/index.html
@@ -264,7 +264,7 @@
     </div>  
     <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
       <div class="h-100 p-5 rounded-3">
-        <h2 class="display-8" >Principal, Equity Group</h2>
+        <h2 class="display-8" >Principal </h2>
         <p class="exp pt-3"> 
           Mr. Jay Parteek has over 10 years of experience in IT and software companies in Silicon Valley. 
           <br/>
@@ -273,7 +273,7 @@
         
         </p>
           <br/>
-          <p class="exp">His primary focus is on structuring and negotiating transactions.</p>
+          <p class="exp">His focus is on business development, specifically acquisitions.  </p>
 
         <div class="" style="margin-top:50px;">
           <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="/kha" > READ MORE </a> -->
