--- a/public/BoardMembers_DealFlow_&_Plan/index.html
+++ b/public/BoardMembers_DealFlow_&_Plan/index.html
@@ -361,7 +361,7 @@
         <tr>
           <th scope="row">1 </th>
           <td>Home Remodelling</td>
-          <td>FL</td>
+          <td>San Antonio, TX</td>
           <td>650,300</td>
           <td>4 mm</td>
 
@@ -370,7 +370,7 @@
         <tr>
           <th scope="row">2 </th>
           <td>	Home improvement </td>
-          <td>  </td>
+          <td> FL </td>
           <td>900,109</td>
           <td>4 Mm</td>
 
@@ -405,7 +405,7 @@
     </table>
 
     <p>
-      There are a total of 15 remodeling related deals that brokers provided me. 
+      <!-- There are a total of 15 remodeling related deals that I got from brokers.  -->
     </p> 
     
   </br></br></br>
