--- a/public/deals/index.html
+++ b/public/deals/index.html
@@ -204,6 +204,10 @@
         1. What is the goal of the venture?
         <br/>
         Answer: To acquire construction companies. 
+        <br/><br/>
+        1A. Why ? 
+        <br/>
+        Answer: Its very fragmented industry & the demand is outpacing the supply. 
         
                                 <br/><br/>
                                 2. Do you have a platform company?
@@ -216,7 +220,7 @@
                                 Answer:  No 
                                 <br/><br/>
                                 4. Who else is a part of this venture?
-                                <br/>Answer: Myself and Non-Executive Board of Directors, including Legal Director, Finance Director, Two Industry Expert Directors, and advisors.
+                                <br/>Answer: Myself and Non-Executive Board of Directors, including Legal, Finance,Accounting ,2-3 Industry Experts, and advisors.
                     <br/><br/>
                                
                     5. What is the geography focus of the venture?
