--- a/public/BoardMembers_DealFlow_&_Plan/board/index.html
+++ b/public/BoardMembers_DealFlow_&_Plan/board/index.html
@@ -189,7 +189,7 @@
 
  <div class="container-fluid ">
  
- <p> <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Full information about the board members will be provided after the phone call. </p>
+ <p> <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  Full information about the board members will be provided over the phone call. </p>
   <section class="row ">
     <div class="col-md-3">
       <div class="h-100 p-5 rounded-3">
@@ -210,7 +210,7 @@
           <p class="exp">He helps us with deal structuring and negotiating transactions.</p>
 
         <div class="" style="margin-top:50px;">
-          <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../paul" > READ MORE </a>
+          <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../paul" > READ MORE </a> -->
       </div>
       </div>
     </div>
