--- a/public/BoardMembers_DealFlow_&_Plan/board/index.html
+++ b/public/BoardMembers_DealFlow_&_Plan/board/index.html
@@ -234,7 +234,7 @@
         <h2 class="display-8" > Founder of two remodeling firms</h2>  
         <p class="exp pt-3"> 
           
-          As an experienced entrepreneur and company leader, he is renowned for successfully launching and expanding multi-state enterprises. 
+          As an experienced serial entrepreneur and company leader, he is renowned for successfully launching and expanding multi-state enterprises. 
           <br/>
 At one point, the firm, was named the fastest-growing in the country.  He successfully grew his firm to over 240 employees before selling to a strategic buyer.  
 <br/>
@@ -252,7 +252,7 @@ In addition, he and his partner launched another remodeling firm in another stat
     </div>
   </section> 
   
-
+<!-- 
   <section class="row ">
     <div class="col-md-3">
       <div class="h-100 p-5 rounded-3">
@@ -279,7 +279,7 @@ In addition, he and his partner launched another remodeling firm in another stat
       </div>
       </div>
     </div>
-  </section> 
+  </section>  -->
 
 
 
