--- a/public/Boardmembers_plan_&_deal_flow/board/index.html
+++ b/public/Boardmembers_plan_&_deal_flow/board/index.html
@@ -246,7 +246,7 @@ In addition, he and his partner launched another remodeling firm in another stat
        <p class="exp">He helps us with due diligence on new acquisition targets and advice on running the companies.</p>
 
         <div class="" style="margin-top:50px;">
-
+          
       </div>
       </div>
     </div>
@@ -262,10 +262,10 @@ In addition, he and his partner launched another remodeling firm in another stat
     <div class="col-md-3">
       <div class="h-100 p-5 rounded-3">
         
-        <img  loading="lazy" src="../../static/img/profile-images/blank.jpg"
+        <img  loading="lazy" src="../../static/img/profile-images/jim.jpg"
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                       alt="" loading="lazy"
-                      data-src="../../static/img/profile-images/blank.jpg" />
+                      data-src="../../static/img/profile-images/jim.jpg" />
 
       </div>
     </div>  
@@ -281,7 +281,7 @@ In addition, he and his partner launched another remodeling firm in another stat
           <p class="exp"> He helps us with due diligence on new acquisition targets and advice on running the acquisitions.</p>
 
         <div class="" style="margin-top:50px;">
-
+          <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../jim" > READ MORE </a>
       </div>
       </div>
     </div>
