created page for lawyers

--- a/public/Boardmembers_pro_law/board/index.html
+++ b/public/Boardmembers_pro_law/board/index.html
@@ -210,7 +210,8 @@
           <p class="exp">He helps us with deal structuring and negotiating transactions.</p>
 
         <div class="" style="margin-top:50px;">
-          <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../paul" > READ MORE </a> -->
+          <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../paul" > READ MORE </a>
+          
       </div>
       </div>
     </div>
@@ -271,7 +272,7 @@ In addition, he and his partner launched another remodeling firm in another stat
     </div>  
     <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
       <div class="h-100 p-5 rounded-3">
-        <h2 class="display-8" > “Big 4” CPA firm experience</h2>  
+        <h2 class="display-8"> “Big 4” CPA firm experience </h2>  
         <p class="exp pt-3"> 
           He possesses an exceptional background in accounting and finance, with over 25 years of experience in Real Estate Finance, 
           Accounting, Administration, and Leadership, including working with “Big 4” CPA firms. 
