--- a/public/Boardmembers_pro_law/jim/index.html
+++ b/public/Boardmembers_pro_law/jim/index.html
@@ -189,10 +189,10 @@
        <!-- <div class="col-md-4 ms-auto order-sm-2"> -->
        <div class="col-md-4 ms-auto order-sm-2 pic-pdrt">
         <div class="h-100 p-5 rounded-3">
-            <img  loading="lazy" src="jim.jpg"
+            <img  loading="lazy" src="../../static/img/profile-images/jim.png"
                           style="border-radius: 25px; margin-top: 100px;" width="500" height="610"  class="img-fluid lazyload"
                           alt="Jim" loading="lazy"
-                          data-src="jim.jpg" />
+                          data-src="../../static/img/profile-images/jim.png" />
           </div>
       </div>
      </div>
