--- a/public/BoardMembers_&_DealFlow/board/index.html
+++ b/public/BoardMembers_&_DealFlow/board/index.html
@@ -247,6 +247,38 @@
   </section> 
 
 
+
+
+
+  <section class="row ">
+    <div class="col-md-3">
+      <div class="h-100 p-5 rounded-3">
+        
+        <img  loading="lazy" src="../../static/img/profile-images/blank.jpg"
+                      style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
+                      alt="" loading="lazy"
+                      data-src="../../static/img/profile-images/blank.jpg" />
+
+      </div>
+    </div>  
+    <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
+      <div class="h-100 p-5 rounded-3">
+        <h2 class="display-8" >Legal Counsel </h2>
+        <p class="exp pt-3"> 
+          Seasoned professional with over 25 years experience in the commercial and residential construction industries working in a small firm, a large national firm and as an in-house lawyer
+          <br/>
+          
+        </p>
+          <br/>
+          <p class="exp">She helps us by conducting legal due diligence and offering legal advice on various matters.
+          </p>
+
+        <div class="" style="margin-top:50px;">
+          <!-- <a class="button wooden-a" style=" text-transform: capitalize; text-decoration: none;" href="../peggy" > READ MORE </a> -->
+      </div>
+      </div>
+    </div>
+  </section>
   
 
 
